# visa-photo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  models.toml  presets.toml
.github/workflows/: release.yml
models/: download.sh
src/: background.rs  main.rs  models.rs  preset.rs  processing.rs
tools/: rembg-vision.swift
visa-photo-web/: .gitignore  astro.config.mjs  package-lock.json  package.json
visa-photo-web/src/components/: App.tsx
visa-photo-web/src/lib/: background.ts  crop.ts  presets.ts  process.ts
visa-photo-web/src/pages/: index.astro
