[package]
name = "visa-photo"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rfd = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
base64 = "0.22"
