[package]
name = "visa-photo"
version = "0.1.0"
edition = "2024"
description = "Desktop app for preparing biometric visa/passport photos"
license = "MIT"
repository = "https://github.com/fortunto2/visa-photo"
keywords = ["visa", "photo", "biometric", "crop", "passport"]
categories = ["multimedia::images"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = ["rembg"]
rembg = ["ort", "ndarray"]

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rfd = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
base64 = "0.22"
ort = { version = "=2.0.0-rc.11", optional = true, default-features = false, features = [
    "std", "ndarray", "download-binaries", "copy-dylibs", "coreml", "tls-native"
] }
ndarray = { version = "0.17", optional = true }
